deployment/coffee-shop/deployment-v2.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: coffee-shop-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coffee-shop
      version: v2
  template:
    metadata:
      labels:
        app: coffee-shop
        version: v2
    spec:
      containers:
      - name: coffee-shop
        image: sdaschner/coffee-shop:quarkus-zero-downtime-2
        imagePullPolicy: Always
        readinessProbe:
          exec:
            command:
            - "/bin/sh"
            - "-c"
            - "curl -f localhost:8080/health"
        ports:
        - containerPort: 8080
      restartPolicy: Always
---
