deployment/coffee-shop/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: coffee-shop
  labels:
    app: coffee-shop
spec:
  selector:
    app: coffee-shop
  ports:
    - port: 8080
      name: http
---
