deployment/coffee-shop/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: coffee-shop
spec:
  backend:
    serviceName: coffee-shop
    servicePort: 8080
---
