deployment/coffee-shop/service-entry.yaml
# to self
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: coffee-shop
spec:
  hosts:
  - "coffee-shop.example.com"
  addresses:
  # Istio gateway, needs to be reached from fortio
  - "159.122.92.154"
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: NONE
  location: MESH_EXTERNAL
---
